<resources>
    <string name="app_name">Weather Radar</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibGlvbGFuIiwiYSI6ImNtbmhhem00MzAwbzcycXF1MzQ5Ym9ueHkifQ.rqhF9pYINCYaOJqIZhYiMA</string>
    <string name="loading">Loading...</string>
    <string name="unit_setting">Unit Settings</string>
    <string name="personalise">PERSONALISE</string>
    <string name="choose_unit">Choose your preferred units for best experience</string>
    <string name="basic">BASIC</string>
    <string name="temperature">Temperature</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="time_format">Time Format</string>
    <string name="twelve_hour">12h</string>
    <string name="twenty_four_hour">24h</string>
    <string name="precipitation">Precipitation</string>
    <string name="mm">mm</string>
    <string name="in">in</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind">Wind</string>
    <string name="ms">m/s</string>
    <string name="kmh">km/h</string>
    <string name="mih">mi/h</string>
    <string name="knot">Knot</string>
    <string name="beaufort_scale">Beaufort scale</string>
    <string name="pressure">Pressure</string>
    <string name="mm_hg">mmHg</string>
    <string name="h_pa">hPa</string>
    <string name="atm">atm</string>
    <string name="m_bar">mBar</string>
    <string name="in_hg">inHg</string>
    <string name="k_pa">kPa</string>
    <string name="ongoing_notification">Ongoing Notification</string>
    <string name="show_weather_in_status_bar">Show weather in status bar</string>
    <string name="save_preferences">SAVE PREFERENCES</string>
    <string name="location_permission">Location Permission</string>
    <string name="turn_on_location_services">Turn on location services to get the most\n accurate forecast for your location</string>
    <string name="we_use_your_location">We use your location to provide local\n weather, alerts and other fetures. You can\n change it at any time in your setting.</string>
    <string name="enable_my_location">ENABLE MY LOCATION</string>
    <string name="detecting_location">Detecting Location...</string>
    <string name="double_dash">--</string>
    <string name="min_max_temp">--°C / --°C</string>
    <string name="zero_percent">0%</string>
    <string name="reel_feel">Real Feel --°C</string>
    <string name="morning_time">6:08am</string>
    <string name="evening_time">6:12pm</string>
    <string name="warning">⚠ Warning</string>
    <string name="check_your_radar_location">Check your radar location now!</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="saved_add">Saved Addresses</string>
    <string name="menu_home">Home</string>
    <string name="menu_manage_location">Manage location</string>
    <string name="menu_unit_preference_setting">Unit Preference Setting</string>
    <string name="menu_notification_settings">Notification Settings</string>
    <string name="menu_radar">Radar</string>
    <string name="menu_get_pro_version">Get PRO Version</string>
    <string name="menu_customise">Customise</string>
    <string name="menu_language">Language</string>
    <string name="menu_feedback">Feedback &amp; Suggestions</string>
    <string name="menu_developer">DEVELOPER</string>
    <string name="menu_rate_me">Rate me</string>
    <string name="menu_report_a_problem">Report a problem</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="now">Now</string>
    <string name="seventeen">17</string>
    <string name="city_state">City, State</string>
    <string name="pin_code">000000</string>
    <string name="full_address_details">Full Address Details</string>
    <string name="premium">PREMIUM</string>
    <string name="unlock_premium">Unlock Premium Weather\nFeatures Today</string>
    <string name="ad">AD</string>
    <string name="no_advertising">No advertising</string>
    <string name="faster_data_loading">Faster data loading</string>
    <string name="better_direct_support">Better direct support and many more...</string>
    <string name="view_details">VIEW DETAILS  »</string>
    <string name="settings">SETTINGS</string>
    <string name="temp_add">352, Block A Phase 1 Johar Town, Lahore, 54770, Pakistan</string>
    <string name="temp_temp">30°</string>
    <string name="temp_time_date">6:24 pm Mon, 30 March 2026</string>
    <string name="overcast_clouds">Overcast Clouds</string>
    <string name="uv_index_and_humidity">UV Index: 0\nHumidity: 27%</string>
    <string name="temp_precipitation">Min: 19° Max: 33°\nPrecipitation: 0.00 mm</string>
    <string name="temp_date">Mon, 30 March 2026</string>
    <string name="temp_time">6:24 pm</string>
    <string name="add_new_add">Add New Address</string>
    <string name="pin_code_text">Pincode</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="full_add">Full Address</string>
    <string name="save_add">SAVE ADDRESS</string>
    <string name="notification_permission_text">Allow Weather Radar Robot: Weather Forecast to send you notifications?</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="english">English (US)</string>
    <string name="language">Language</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="app_will_restart">The app will restart to apply changes</string>
    <string name="feedback_suggestions">Feedback &amp; Suggestions</string>
    <string name="feedback">FEEDBACK</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="we_read_every_message">We read every message carefully to make the app better for you. Thank you for your support.</string>
    <string name="title">TITLE</string>
    <string name="brief_summary">Brief summary of your feedback</string>
    <string name="message">MESSAGE</string>
    <string name="describe_your_feedback">Describe your feedback in detail...</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="your_feedback_is_anonymous_and_secure">Your feedback is anonymous and secure</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="cloudy">Cloudy</string>
    <string name="snow">Snow</string>
    <string name="enable_notification">Enable Notifications</string>
    <string name="icons">Icons</string>
    <string name="widgets">Widgets</string>
    <string name="background">Background</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="confirm_your_order">Confirm your order delivery location</string>
    <string name="detecting">Detecting...</string>
    <string name="confirm_and_add_details">Confirm and add details</string>
    <string name="move_pin_to_set_your_exact_location">Move pin to set your exact location</string>
    <string name="search_for_delivery_area">Search for delivery area</string>
    <string name="address_details">Address details</string>
    <string name="complete_address">Complete address would assist better us in serving you</string>
    <string name="select_address_type">Select address type</string>
    <string name="office">Office</string>
    <string name="friend_home">Friend\'s house</string>
    <string name="complete_address_details">Complete address *</string>
    <string name="nearby_landmark">Nearby Landmark (optional)</string>
    <string name="save_address">Save address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="thirty_day_forecast">30-Day Forecast – Tap a day to see the daily forecast</string>
    <string name="air_quality">Air Quality</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="chance_of_snow">Chance of snow</string>
    <string name="add_widget_to_desktop">Add widget to the desktop</string>
    <string name="see_more">SEE MORE</string>
    <string name="add">ADD</string>
    <string name="moon_phase">Moon phase</string>
    <string name="illumination">Illumination</string>
    <string name="moonrise">Moonrise</string>
    <string name="next_new_moon">Next New Moon</string>
    <string name="days">days</string>
</resources>
