<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_manage_location"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_manage_location" />

        <item
            android:id="@+id/nav_unit_preference"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_unit_preference_setting" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notification_settings" />

        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/ic_radar"
            android:title="@string/menu_radar" />

        <item
            android:id="@+id/nav_pro"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_get_pro_version" />

        <item
            android:id="@+id/nav_customise"
            android:icon="@drawable/ic_customise"
            android:title="@string/menu_customise" />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/menu_language" />

        <item
            android:title="@string/menu_developer"
            android:enabled="false"
            android:id="@+id/nav_developer_header" />

        <item
            android:id="@+id/nav_rate_me"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rate_me" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_report_a_problem"
            android:icon="@drawable/ic_bug"
            android:title="@string/menu_report_a_problem" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/menu_privacy_policy" />

    </group>
</menu>